--- a/PatientRecordsModule/PatientRecordsModule.csproj
+++ b/PatientRecordsModule/PatientRecordsModule.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\AssignmentDTO.cs" />
+    <Compile Include="DTOs\CommonIdName.cs" />
     <Compile Include="DTOs\RecordDTO.cs" />
     <Compile Include="DTOs\VisitDTO.cs" />
     <Compile Include="Misc\Common.cs" />
