--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -140,6 +140,7 @@
     <Compile Include="PartialClasses\PersonName.cs" />
     <Compile Include="PartialClasses\PersonSocialStatus.cs" />
     <Compile Include="PartialClasses\RecordContract.cs" />
+    <Compile Include="PartialClasses\Urgently.cs" />
     <Compile Include="PersonDiagnos.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
