--- a/PatientRecordsModule/PatientRecordsModule.csproj
+++ b/PatientRecordsModule/PatientRecordsModule.csproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <Compile Include="DTOs\BrigadeDTO.cs" />
     <Compile Include="DTOs\CommonRecordAssignmentDTO.cs" />
+    <Compile Include="Misc\BindingProxy.cs" />
     <Compile Include="Misc\IRecordTypeEditorResolver.cs" />
     <Compile Include="Misc\RecordTypeEditor.cs" />
     <Compile Include="ViewModels\BrigadeViewModel.cs" />
