--- a/ScheduleModule/ScheduleModule.csproj
+++ b/ScheduleModule/ScheduleModule.csproj
@@ -121,9 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\ScheduledAssignmentDTO.cs" />
+    <Compile Include="DTO\ScheduleDateTimesDTO.cs" />
     <Compile Include="Exceptions\AssignmentConflictException.cs" />
     <Compile Include="Exceptions\SamePatientAssignmentConflictException.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
+    <Compile Include="Misc\SelectedTimeIntervalWrapper.cs" />
+    <Compile Include="Misc\SelectedTimesEventArg.cs" />
     <Compile Include="Misc\UIConfiguration.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
